# GEMcon

./: .RData  .Rhistory  .dockerignore  .gitignore  .gitignore~  CHANGELOG.md  Dockerfile  README.md  Recon2_confidence_scores.csv  config.yaml  config.yaml~  expression_data.csv  expression_data_gencode.csv  gimme_context_specific_model_expression_data_hippocampus-development-human-brain-10XV2_gencode.xml  gimme_output_expression_data_hippocampus-development-human-brain-10XV2_annotated_gencode.tsv  gimme_output_expression_data_hippocampus-development-human-brain-10XV2_gencode.tsv  gimme_output_tinit.tsv  gtex_api_qr.txt  gtex_api_r.txt  hca_api_logs.txt  pyproject.toml  reorganize.sh  run.py
.ipynb_checkpoints/: test-checkpoint.ipynb
docs/: explanation.md  utils.md
envs/: cplex_env.yml  gecko_env.yml  scanpy_env.yml  scanpy_legacy.yml  scanpy_legacy_aman.yml
expression_by_celltype/: Endothelial_cells.csv  Epithelial_cells.csv  Fibroblasts.csv  Intestinal_macrophages.csv  Late_erythroid.csv  Myelocytes.csv  NK_cells.csv  Plasma_cells.csv  Tcm_Naive_helper_T_cells.csv  Trm_cytotoxic_T_cells.csv
gemcon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hpo/ontology-annotation-network-client/: README.md  pyproject.toml
hpo/ontology-annotation-network-client/ontology_annotation_network_client/: __init__.py
hpo/ontology-annotation-network-client/ontology_annotation_network_client/api/default/: intersect.py  search_entity.py
hpo/ontology-annotation-network-client/ontology_annotation_network_client/models/: __init__.py
src/: gimme.py  (+12 more)
(+86 files in other folders)
