[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemcon"
version = "0.1.0"
description = "Transcriptomic and proteomic based metabolic model contextualized"
authors = [
    {name = "Aman Nalakath", email = "aman.nalakath@tum.de"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "typer>=0.17.0",
    "prefect>=3.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
gemcon = "scripts.cli:app"

[tool.setuptools]
packages = ["scripts"]